ak1pro/base/jellyfin/jellyfin-sts-proxyed.yaml
# it does not work because the index/spa
# instructs the browser to get urls
# and no proxy will rewrite text
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: prod
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [
              {
                  "namespace": "kube-system",
                  "name": "home-network",
                  "ips": ["192.168.100.220"]
              }
          ]
    spec:
      # for DLNA to broadcast on the node network
      # hostNetwork: true
      containers:
        - name: envoy
          args:
            - -c $(CONFIG_FILE)
            - -l $(LOG_LEVEL)
            - --service-cluster $(SERVICE_CLUSTER)
          env:
            - name: CONFIG_FILE
              value: /opt/envoy/envoy.yaml
            - name: LOG_LEVEL
              value: info
            - name: SERVICE_CLUSTER
              value: proxy
          image: envoyproxy/envoy:v1.26.4
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 50Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/envoy/
              name: jellyfin-proxy-envoy

        - name: jellyfin
          image: jellyfin/jellyfin:latest
          env:
            - name: TZ
              value: "Europe/Bucharest"
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
          ports:
            - name: web-ui
              containerPort: 8096
            - name: service
              containerPort: 1900
              # hostPort: 1900
            - name: client
              containerPort: 7359
              # hostPort: 7359
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
          #   - name: dev-dri
          #     mountPath: /dev/dri/
          # securityContext:
          #   allowPrivilegeEscalation: true
      volumes:
        - name: config
          hostPath:
            type: Directory
            path: /mnt/smg2t/config/jellyfin/config
        - name: cache
          hostPath:
            type: Directory
            path: /mnt/smg2t/config/jellyfin/cache
        - name: media
          hostPath:
            type: Directory
            path: /mnt/smg2t/media
        # - name: dev-dri
        #   hostPath:
        #     path: /dev/dri/
        - name: jellyfin-proxy-envoy
          configMap:
            name: jellyfin-proxy-envoy
            items:
              - key: envoy.yaml
                path: envoy.yaml
