ak1pro/base/jellyfin/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: staging
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.100.146
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - name: web-ui
      protocol: TCP
      port: 80
      targetPort: 8096
    - name: service
      protocol: UDP
      port: 1900
      targetPort: 1900
    - name: client
      protocol: UDP
      port: 7359
      targetPort: 7359
