ak1pro/base/jellyfin/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: staging
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      # for DLNA to broadcast on the node network
      # used multus with macvlan instead
      # hostNetwork: true
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          imagePullPolicy: Always
          env:
            - name: TZ
              value: "Europe/Bucharest"
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
          ports:
            - name: web-ui
              containerPort: 8096
            - name: service
              containerPort: 1900
              # hostPort: 1900
            - name: client
              containerPort: 7359
              # hostPort: 7359
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
          #   - name: dev-dri
          #     mountPath: /dev/dri/
          # securityContext:
          #   allowPrivilegeEscalation: true
      volumes:
        - name: config
          hostPath:
            type: Directory
            path: /mnt/smg2t/config/jellyfin2/config
        - name: cache
          hostPath:
            type: Directory
            path: /mnt/smg2t/config/jellyfin2/cache
        - name: media
          hostPath:
            type: Directory
            path: /mnt/smg2t/media2
        # - name: dev-dri
        #   hostPath:
        #     path: /dev/dri/
